# PD2Breadboard

./: .gitignore  .gitmodules  README.md
.github/workflows/: cmake.yml
Hardware/: USB-PD.kicad_pcb  USB-PD.kicad_prl  USB-PD.kicad_pro
Hardware/Rev 1/: .gitignore  USB-PD.kicad_prl  USB-PD.kicad_sch  model.pcb3d
Hardware/Rev 1/Sheets/: Buttons.kicad_sch  Current Shunt.kicad_sch  EEPROM.kicad_sch  FUSB302.kicad_sch  PawPad.kicad_sch  RP2040.kicad_sch
Hardware/Rev 1/bom/: ibom.html
Hardware/Rev 1/production/: netlist.ipc
Hardware/Rev 2/: USB-PD.kicad_pcb  USB-PD.kicad_prl  USB-PD.kicad_pro  USB-PD.kicad_sch
Hardware/Rev 2/Sheets/: Buttons.kicad_sch  Display.kicad_sch  MOSFETs.kicad_sch  RP2040.kicad_sch  USB.kicad_sch
Hardware/Sheets/: Display.kicad_sch  MOSFETs.kicad_sch  Mounting.kicad_sch  Power.kicad_sch  USB.kicad_sch
Software/: Background.h  CMakeLists.txt  Defines.hpp  README.md  Software.code-workspace  main.cpp  programmer.bat  programmer.py  scanner.bat
Software/Embedded/: CMakeLists.txt  Software.code-workspace
Software/Embedded/include/: Defines.hpp
Software/Embedded/lib/: README.md
Software/Embedded/lib/Display/include/: Display_Commands.hpp
Software/Embedded/lib/Display/src/: Display.cpp
Software/Embedded/lib/FUSB302/: CMakeLists.txt  README.md
Software/Embedded/lib/FUSB302/include/: FUSB302.hpp  FUSB302_Enum.hpp  FUSB302_Registers.hpp  FUSB302_Structs.hpp
Software/Embedded/lib/INA219/include/: INA219_Data.hpp  INA219_Registers.hpp
Software/Embedded/lib/Registers/: CMakeLists.txt
Software/Embedded/lib/Registers/include/: Registers.hpp
Software/Embedded/lib/USB_PD/include/: PD_Enums.hpp  PD_Errors.hpp  PD_UFP.h  USB_PD.hpp
Software/Embedded/lib/USB_PD/src/: PD_UFP.cpp  USB_PD.cpp
Software/Embedded/scripts/font_converter/: convert_font_to_bitmap.py
Software/Embedded/src/: main.cpp  main2.cpp
Software/include/: Defines.hpp  bg.h  main.h  test.h  version.h.in
Software/lib/Display/: CMakeLists.txt
Software/lib/Display/Fonts/: Font.h
Software/lib/Display/include/: Display.hpp  Display_Color.hpp  Display_Structs.hpp
Software/lib/Display/src/: Display.cpp  Print.cpp  display.cpp
Software/lib/FUSB302/: CMakeLists.txt
Software/lib/FUSB302/include/: FUSB302.hpp  FUSB302_Data.hpp  FUSB302_Enum.hpp  FUSB302_Registers.hpp  FUSB302_Structs.hpp
Software/lib/FUSB302/src/: FUSB302.cpp  FUSB302_Abstraction.cpp
Software/lib/INA219/: CMakeLists.txt  README.md
Software/lib/INA219/include/: INA219.hpp  INA219_Enums.hpp
Software/lib/INA219/src/: INA219.cpp
Software/lib/Memory/src/: Memory.cpp
Software/lib/PicoGFX/: .gitignore  .gitmodules  CMakeLists.txt  README.md
Software/lib/PicoGFX/fonts/: ComicSans20.h  ComicSans22.h  ComicSans24.h  ComicSans28.h  ComicSans32.h  ComicSans48.h  FontStruct.h  RobotoMono20.h  RobotoMono22.h  RobotoMono24.h  RobotoMono28.h  RobotoMono32.h  RobotoMono48.h
Software/lib/PicoGFX/include/: Color.h  Dials.hpp  Display.hpp  Encoder.h  GfxMath.h  Gradients.hpp  Graphics.hpp  HardwareSPI.hpp  PicoGFX.hpp  Print.hpp  Shapes.h  Structs.h  pio_spi.pio
Software/lib/PicoGFX/scripts/: convert_font_to_bitmap.py
Software/lib/PicoGFX/specifics/: GC9A01.cpp  ST7789.cpp
Software/lib/PicoGFX/src/: Dials.cpp  Display.cpp  Encoder.cpp  GfxMath.c  Gradients.cpp  Graphics.cpp  HardwareSPI.cpp  PicoGFX.cpp  Print.cpp
Software/lib/Registers/include/: Register_Map.hpp  Registers.hpp
Software/lib/Registers/src/: Registers.cpp
Software/lib/USB_PD/: CMakeLists.txt
Software/lib/USB_PD/include/: PD_Errors.hpp  USB_PD.hpp
Software/lib/USB_PD/src/: USB_PD.cpp
Software/scripts/font_converter/: convert_font_to_bitmap.bat  convert_font_to_bitmap.py
Software/scripts/programmer/: programmer.py
Software/src/: main.cpp  main1.cpp  main2.cpp
